Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
0.11.0
-
None
Description
Once I upgraded to 0.11.0, I'm getting the following error occasionally:
THRIFT LOGGER: TConnection::workSocket(): THRIFT_EAGAIN (unavailable resources)
I tracked this to the following change: https://github.com/apache/thrift/commit/808d143245f4f5c30600fab31cf9db854cbf5b48#diff-fe8fec8ec38ea35df64cfcc305e3ab08
// Work the socket right away - // workSocket(); + workSocket();
While adding SSL support, @dthaluru has re-activated the above line. From my own testing, this causes occasional THRIFT_EAGAIN exceptions. It seems like this is due to calling workSocket() too early and the socket gets a read call in non-blocking mode before it has data.
Attachments
Issue Links
- is caused by
-
THRIFT-4276 Add SSL support to the C++ Nonblocking Server
- Closed
- links to